# wxRTCFD_Code

./: .gitignore  CMakeLists.txt  ConstInvel3Res122_5288To122210.pt  README.md  Read_Me_Training.md  net-best.pt  net-best_traced.pt
include/: GUIFrame.h  draw.h  fluid.h  region.h  settings.h  wxRTCFD_Code_Main.h
src/: GUIFrame.cpp  draw.cpp  fluid.cpp  fluid.mm  region.cpp  settings.cpp  wxRTCFD_Code_Main.cpp
